--- a/about.html
+++ b/about.html
@@ -19,11 +19,11 @@ header-img: "img/post-bg-rwd.jpg"
 
     <p>Hey，我是<strong>浩豪（Hh）</strong>，现在在搭建一个属于自己的博客</p>
 
-    <p>我希望可以把这个博客变成一个很酷的地方</p>
+    <p>我希望可以把这个博客变成一个很酷的地方！</p>
 
     <p>这是我利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页<a href="https://github.com/illionhh">👉GitHub·illionhh</a>。如果有什么问题，欢迎提出探讨~</p>
 
-    <p></p>
+    <p>感谢GitHub上的各位前辈～</p>
     
     <h5>Talks</h5>
 
@@ -31,6 +31,7 @@ header-img: "img/post-bg-rwd.jpg"
         <li><a href="https://github.com">GitHub</a></li>
         <li><a href="http://jekyll.com.cn/">jekyll</a></li>
         <li><a href="http://huangxuan.me/">Hux</a></li> 
+        <li><a href="http://qiubaiying.top/">BY</a></li>
         <li><a href="https://analytics.google.com/analytics">Google Analytics</a></li>
     </ul>
 </div>
